--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-3">
-                    <div class="card h-10">
+                    <div class="card">
                         <img src="https://images.unsplash.com/photo-1486551937199-baf066858de7" alt=""
                             class="card-img-top">
                         <div class="card-body">
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mb-3">
-                        <div class="card h-10">
+                        <div class="card">
                             <img src="https://images.unsplash.com/photo-1511452885600-a3d2c9148a31" alt=""
                                 class="card-img-top">
                             <div class="card-body">
